syntax = "proto2";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import 'google/protobuf/descriptor.proto';
import "google/protobuf/timestamp.proto";

extend google.protobuf.MethodOptions {
	optional string description = 50056;
	optional bool internalMethod = 50057;
}

service Greeter  {
	rpc Hello(HelloRequest) returns (HelloResponse) {}
	rpc GoodBye(HelloRequest) returns (HelloResponse) {
		option(description) = "This is an internal goodbye method";
		option(internalMethod) = true;
	}

};

message HelloRequest {
	optional string name = 1 [(gogoproto.nullable) = false,
							 (gogoproto.jsontag) = "MyField1",
							 (gogoproto.moretags) = "pg:\",array\", sql:\",pk\""];
}
message HelloResponse {
	optional string greeting = 2;
	optional google.protobuf.Timestamp createDate = 3 [(gogoproto.stdtime) = true];
}
